--- a/pom.xml
+++ b/pom.xml
@@ -8,24 +8,27 @@
         <version>3.2.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>sk.posam</groupId>
-    <artifactId>moneymate</artifactId>
+    <groupId>sk.rostsv.fsa.moneymate</groupId>
+    <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>moneymate</name>
-    <description>moneymate</description>
+    <name>moneymateParent</name>
+    <description>Finance application "Money-Mate"</description>
+    <modules>
+        <module>springboot</module>
+        <module>domain</module>
+        <module>outbound-repository-jpa</module>
+        <module>inbound-controller-ws</module>
+        <module>api-spec</module>
+    </modules>
+    <packaging>pom</packaging>
     <properties>
         <java.version>21</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -34,21 +37,6 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
 
 </project>
