--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -4,12 +4,28 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>sk.rostsv.fsa.moneymate</groupId>
+        <groupId>sk.posam.fsa.moneymate</groupId>
         <artifactId>parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
     <artifactId>springboot</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>sk.posam.fsa.moneymate</groupId>
+            <artifactId>outbound-repository-jpa</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>sk.posam.fsa.moneymate</groupId>
+            <artifactId>inbound-controller-ws</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
