--- a/inbound-controller-ws/pom.xml
+++ b/inbound-controller-ws/pom.xml
@@ -14,8 +14,13 @@
     <dependencies>
         <dependency>
             <groupId>sk.posam.fsa.moneymate</groupId>
+            <artifactId>domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>sk.posam.fsa.moneymate</groupId>
             <artifactId>api-spec</artifactId>
-            <version>${project.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
