--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -14,8 +14,12 @@ services:
             - moneymate_db_disk:/var/lib/postgresql/data
 
     keycloak:
+#        image: quay.io/keycloak/keycloak:22.0.5
+#        command:
+#            - start-dev
         build:
             context: .
+
         environment:
             KEYCLOAK_ADMIN: admin
             KEYCLOAK_ADMIN_PASSWORD: admin
