--- a/inbound-controller-ws/pom.xml
+++ b/inbound-controller-ws/pom.xml
@@ -40,5 +40,34 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <bannedDependencies>
+                                    <excludes>
+                                        <!-- Activate whitelisting of allowed submodules -->
+                                        <exclude>sk.posam.fsa.moneymate*</exclude>
+                                    </excludes>
+                                    <includes>
+                                        <!-- All allowed dependencies -->
+                                        <include>sk.posam.fsa.moneymate:domain</include>
+                                        <include>sk.posam.fsa.moneymate:api-spec</include>
+                                    </includes>
+                                </bannedDependencies>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
