--- a/outbound-repository-jpa/pom.xml
+++ b/outbound-repository-jpa/pom.xml
@@ -40,7 +40,7 @@
                                         <exclude>sk.posam.fsa.moneymate:*</exclude>
                                     </excludes>
                                     <includes>
-                                        <!-- Domain is obviously required -->
+                                        <!-- All allowed dependencies -->
                                         <include>sk.posam.fsa.moneymate:domain</include>
                                     </includes>
                                 </bannedDependencies>
