rename "firstName" to "name" in User so it makes more sense

--- a/api-spec/src/main/resources/openapi/moneymate.yaml
+++ b/api-spec/src/main/resources/openapi/moneymate.yaml
@@ -491,7 +491,7 @@ components:
           description: Email address of the user.
         role:
           $ref: '#/components/schemas/UserRole'
-        firstName:
+        name:
           type: string
 
     UserRole:
