--- a/api-spec/src/main/resources/openapi/moneymate.yaml
+++ b/api-spec/src/main/resources/openapi/moneymate.yaml
@@ -155,6 +155,29 @@ paths:
                 items:
                   $ref: '#/components/schemas/Transaction'
 
+  /accounts/transaction/{transactionId}:
+    delete:
+      tags:
+        - Transaction
+      summary: Delete transaction by ID
+      operationId: deleteTransactionById
+
+      parameters:
+        - name: transactionId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+            description: Numeric id of the transaction to delete
+      responses:
+        '204':
+          description: Transaction deleted successfully
+        '400':
+          description: Invalid input parameters
+        '404':
+          description: Transaction not found
+
   /accounts/{accountId}/transactions:
     get:
       tags:
@@ -246,37 +269,6 @@ paths:
           description: Invalid input parameters
         '404':
           description: Transaction not found
-
-  /accounts/{accountId}/transactions/{transactionId}:
-    delete:
-      tags:
-        - Transaction
-      summary: Delete transaction by ID
-      operationId: deleteTransactionById
-
-      parameters:
-        - name: accountId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            description: Numeric id of the account
-        - name: transactionId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            description: Numeric id of the transaction to delete
-      responses:
-        '204':
-          description: Transaction deleted successfully
-        '400':
-          description: Invalid input parameters
-        '404':
-          description: Transaction not found
-
 
   /categories:
     get:
