implement update of user v1.0

--- a/springboot/src/main/resources/application.yaml
+++ b/springboot/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/moneymate
+    url: jdbc:postgresql://localhost:5432/fsa
     username: admin
     password: admin
     driver-class-name: org.postgresql.Driver
